[package]
name = "badns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-js = { version = "0.4.1", features = ["patched"] }
serde_json = "1.0"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rustdns = { path = "../rustdns" }
sha256 = "1.5.0"
num-traits = "0.2.17"
futures-util = "0.3.31"
hyper-reverse-proxy = { path = "../hyper-reverse-proxy" }
lazy_static = "1.5.0"
